<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_favourites_activity">Favourites</string>

    <string name="cd_movie_poster">Movie Poster</string>
    <string name="movie_date">Release Date</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_rating">Average Rating</string>

    <string name="ok">OK</string>

    <string name="vote_display">%.1f / 10</string>
    <string name="movies">%s Movies</string>

    <!-- Fonts -->
    <string name="regular_roboto_cond">RegularRobotoCond</string>
    <string name="regular_noto">RegularNoto</string>
    <string name="light_roboto_cond">LightRobotoCond</string>
    <string name="tag_regular_noto">RegularNoto</string>

    <!-- Settings -->
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Movie Settings</string>
    <string name="settings_sort_by_default" translatable="false">@string/settings_sort_by_popularity_value</string>

    <string name="settings_sort_by_key" translatable="false">sort_by</string>
    <string name="settings_sort_by_label">Sort By</string>

    <!-- sort by Ratings -->
    <string name="settings_sort_by_rating_label">Top Rated</string>
    <string name="settings_sort_by_rating_value" translatable="false">top_rated</string>

    <!-- sort by popularity -->
    <string name="settings_sort_by_popularity_value" translatable="false">popular</string>
    <string name="settings_sort_by_popularity_label">Popular</string>

    <!-- sort by now playing -->
    <string name="settings_sort_by_now_playing_label">Now Playing</string>
    <string name="settings_sort_by_now_playing_value" translatable="false">now_playing</string>

    <!-- sort by upcoming -->
    <string name="settings_sort_by_upcoming_label">Upcoming</string>
    <string name="settings_sort_by_upcoming_value" translatable="false">upcoming</string>


    <!-- dialog messages -->
    <string name="alert_api_key_missing">The API Key has is missing.
        Please contact the developer for support.</string>
    <string name="error_movie_load_failed">Failed to load list of popular movies.
        Status Code \\u003D</string>
    <string name="error_movie_fetch_failed">Failed to fetch list of popular movies.</string>
    <string name="error_no_connection">No internet connection found.
        Please ensure that your device is connected to the internet and try again.</string>
    <string name="info_already_faved">This film has already been added to your favourites.</string>
    <string name="error_insert">Failed to add film to your favourites. Please try again.</string>
    <string name="info_insert_successful">This film has been added to your favourites.</string>
    <string name="error_favourites_load_failed">Failed to load favourite movies list.</string>
    <string name="error_no_release_date">Release date unavailable.</string>
    <string name="error_trailer_fetch_failed">Failed to fetch the trailer for this film.</string>
    <string name="alert_no_trailer">No trailers have been found for this film.
        Sorry for any inconvenience caused.</string>
    <string name="error_trailer_load_failed">Failed to load trailers for this film.
        Status Code \\u003D</string>
    <string name="error_review_fetch_failed">Failed to fetch reviews for this film.</string>
    <string name="alert_no_reviews">No reviews have been found for this film.</string>
    <string name="error_review_load_failed">Failed to load reviews for this film.
        Status Code \\u003D</string>
    <string name="exception_unknown_uri"><![CDATA[URI provided is unknown, and cannot be queried => %s]]></string>
    <string name="exception_insert_failed"><![CDATA[Failed to insert film => %s]]></string>
    <string name="exception_default_message">Not yet implemented.</string>
    <string name="info_delete_successful">Selected film removed from favourites</string>
    <string name="error_delete">Failed to remove film from favourites. Please try again.</string>
    <string name="alert_no_favourites">You currently don\'t have any favourite films.
        \n\nYou can start by adding a film as favourite from its Detail screen.</string>
    <string name="title_load_error">Movie Load Error</string>

    <string name="no_image">no image symbol</string>

    <!-- menu -->
    <string name="menu_label_add_favourites">Add to Favourites</string>
    <string name="menu_label_show_favourites">Show Favourites</string>

    <string name="placeholder_review_author">Author Name</string>
    <string name="placeholder_review">The film review goes here.</string>
    <string name="placeholder_trailer">The film trailer goes here.</string>

    <string name="dialog_placeholder">Dialog</string>
    <string name="language">Language</string>

    <string name="label_header_review">%1$s : REVIEWS</string>
    <string name="label_header_trailer">%1$s : TRAILERS</string>
    <string name="label_read_more">Read More</string>
    <string name="label_review_by">Review by %1$s</string>


</resources>
