<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/trailer_list_height"
    android:layout_marginBottom="@dimen/activity_margin"
    android:background="@color/colorListBackground" >

    <ImageView
        android:layout_width="@dimen/trailer_list_width"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:id="@+id/iv_favourite_film"
        android:src="@drawable/ic_no_image"
        android:scaleType="centerCrop"
        android:contentDescription="@string/no_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/text_favourite_film_name"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:gravity="start|center_vertical"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/textsize_xsmall"
        android:ellipsize="end"
        android:tag="@string/tag_regular_noto"
        tools:text="@string/app_name"/>

</LinearLayout>