<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_margin"
    android:background="@drawable/list_selector"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_margin">

    <TextView
        android:id="@+id/tv_review_author"
        style="@style/TextViewReviewAuthor"
        tools:text="@string/placeholder_review_author" />

    <com.ms.square.android.expandabletextview.ExpandableTextView xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
        android:id="@+id/expand_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        expandableTextView:animDuration="200"
        expandableTextView:maxCollapsedLines="3">

        <TextView
            android:id="@+id/expandable_text"
            style="@style/TextViewReview"
            tools:text="@string/placeholder_review" />

        <ImageButton
            android:id="@+id/expand_collapse"
            style="@style/ButtonExpandCollapse"
            android:contentDescription="@string/label_read_more" />

    </com.ms.square.android.expandabletextview.ExpandableTextView>

</LinearLayout>